--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
 		<div data-role="page" id="page1">
 			<!-- Header -->
 			<div data-role="header">
-				<h1>Phonegap Template &amp;</h1>
+				<h1>HotStuff</h1>
 			</div>
 			<!-- /header -->
 
 			<!-- Content    -->
 			<div data-role="content">
-				<h3>Content</h3>
 				<div id="shouldLogin"></div>
 				
 				
