--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<!-- Content    -->
 			<div data-role="content">
 				<div id="shouldLogin"></div>
+				<div id="recommend"></div>
 				
 				
 				<div id="data">
