--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 		
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<!-- Optional theme -->
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
 		<!-- Latest compiled and minified JavaScript -->
-		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+		<script src="bootstrap/js/bootstrap.min.js"></script>
 
 <!--	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
 		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
@@ -36,7 +36,8 @@
 			<!-- Content    -->
 			<div data-role="content">
 				<div id="shouldLogin"></div>
-				<div id="recommend"></div>
+				<div id="recommend">
+					<input type = 'text' id='what'> </input> <button class='btn btn-success' onclick='post()'>Recommend</button></div>
 				
 				
 				<div id="data">
