--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div data-role="content">
 				<div id="shouldLogin"></div>
 				<div id="recommend">
-					<input type = 'text' id='what'> </input> <button class='btn btn-success' onclick='post()'>Recommend</button></div>
+				</div>
 				
 				
 				<div id="data">
