--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 			<!-- Content    -->
 			<br/><br/><br/>
-			<div class="container">
+			<div class="container" data-role="content">
 				<div id="shouldLogin"></div>
 				<div id="recommend">
 					
