--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div class="container">
 						<div class="navbar-header">
 							<a class="btn btn-success navbar-btn "><span class="glyphicon glyphicon-ok"></span></a>
-							<a class="navbar-brand" href="#">Chk't Out</a>
+							<a class="navbar-brand" href="#" onclick='showRecommend()'>Chk't Out</a>
 						</div>
 					</div>
 				</div>
