--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 				<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 					<div class="container">
 						<div class="navbar-header">
-							<a class="btn btn-success navbar-btn "><span class="glyphicon glyphicon-ok"></span></a>
-							<a class="navbar-brand" href="#" onclick='showRecommend()'>Chk't Out</a>
+							<a class="btn btn-danger navbar-btn " onclick="logout()"><span class="glyphicon glyphicon-off"></span></a>
+							<a class="navbar-brand" href="#">Chk't Out</a>
 						</div>
 					</div>
 				</div>
@@ -55,8 +55,10 @@
 
 			<!-- Content    -->
 			<br/><br/><br/>
+			
 			<div class="container" data-role="content">
 				<div id="shouldLogin"></div>
+				<div id="postReco"></div>
 				<div id="recommend">
 					
 				</div>
